@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 241
+#define RUBY_PATCHLEVEL 242
 
 #define RUBY_RELEASE_DATE "2012-06-27"
 #define RUBY_RELEASE_YEAR 2012
